# beatbrix

./: README.md  pyproject.toml
beatbrix/: manage.py
beatbrix/beatbrix/: asgi.py  settings.py  urls.py  wsgi.py
flashbing/: manage.py
flashbing/flashbing/: asgi.py  settings.py  urls.py  wsgi.py
