[tool.poetry]
name = "flashbing"
version = "0.0.1"
description = "A community where everyone can share about electric vehicles and self-driving systems."
authors = ["RobinRheem <robin.rheem@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
