[tool.poetry]
name = "beatbrix"
version = "0.0.1"
description = "Split vocal and instruments of a song."
authors = ["RobinRheem <robin.rheem@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0"

[tool.poetry.dev-dependencies]
ipython = "^7.10"
django-debug-toolbar = "^2.1"
django-extensions = "^2.2"
pylint = "^2.4"
pydocstyle = "^5.0"
coverage = "^5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
